Clean up site yml and added linkedin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>P8105 Homework 4</title>
+<title>P8105: Homework 4</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -292,6 +292,9 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">Linkedin</a>
+</li>
+<li>
   <a href="http://github.com/ac4635/">
     <span class="fa fa-github fa-lg"></span>
      
@@ -306,28 +309,25 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">P8105 Homework 4</h1>
+<h1 class="title toc-ignore">P8105: Homework 4</h1>
 
 </div>
 
 
-<div id="welcome" class="section level1">
-<h1>Welcome!</h1>
-<p>Instructions for HW4 are below.</p>
+<div id="welcome-to-my-website-for-hw4" class="section level1">
+<h1>Welcome to my website for HW4!</h1>
 <div id="problem-1" class="section level3">
 <h3>Problem 1</h3>
-<p>Create a personal website at <YOUR_GH_NAME>.github.io (or some other reasonably-named location). This page can be as extensive as you’d like, but it should include at least:</p>
+<p>Creatde a personal website that includes:</p>
 <ul>
 <li>A brief introductory landing page</li>
-<li>A page giving your academic and professional experience (i.e. a resume)</li>
-<li>Links in the site navigation for your GitHub account, your email, and any other professional networks.</li>
+<li>My Resume</li>
+<li>Links to your GitHub account, your email, and other professional networks.</li>
 </ul>
 </div>
 <div id="problem-2" class="section level3">
 <h3>Problem 2</h3>
-<p>Create a flexdashboard using plotly for that includes at least three distinct plot types (e.g. scatterplots, line plots, bar plots, box plots, etc.). Use one of the following datasets, and load from the p8105.datasets package:</p>
-<p><em>Instacart </em>NY NOAA *NYC Restaurant Inspections These datasets are large; you may want / need to filter or randomly sample from the complete dataset to ensure a reasonable product.</p>
-<p><a href="about.html">about me</a></p>
+<p>Created a flexdashboard using plotly for that includes three distinct plot types (e.g. scatterplots, bar plots, box plots) using NYC Restaurant Inspections dataset</p>
 </div>
 </div>
 
