--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ $(document).ready(function () {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
-  <a href="Rest_Dashboard.html">Rest_Dashboard</a>
+  <a href="Rest_Dashboard.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:&lt;ac4635.cumc.columbia.edu&gt;">
