--- a/about.html
+++ b/about.html
@@ -283,7 +283,10 @@ $(document).ready(function () {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
-  <a href="Rest_Dashboard.html">Rest_Dashboard</a>
+  <a href="Rest_Dashboard.html">Dashboard</a>
+</li>
+<li>
+  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">fa-linkedin fa-lg</a>
 </li>
 <li>
   <a href="mailto:&lt;ac4635.cumc.columbia.edu&gt;">
@@ -292,7 +295,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/ac4635/">
+  <a href="https://github.com/achansak94">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
