--- a/index.html
+++ b/index.html
@@ -286,16 +286,16 @@ $(document).ready(function () {
   <a href="Rest_Dashboard.html">Dashboard</a>
 </li>
 <li>
+  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">fa-linkedin fa-lg</a>
+</li>
+<li>
   <a href="mailto:&lt;ac4635.cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">Linkedin</a>
-</li>
-<li>
-  <a href="http://github.com/ac4635/">
+  <a href="https://github.com/achansak94">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
