Updated linkedin to icon

--- a/index.html
+++ b/index.html
@@ -286,7 +286,10 @@ $(document).ready(function () {
   <a href="Rest_Dashboard.html">Dashboard</a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">fa-linkedin fa-lg</a>
+  <a href="https://www.linkedin.com/in/aisara-chansakul-400398109/">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
 </li>
 <li>
   <a href="mailto:&lt;ac4635.cumc.columbia.edu&gt;">
@@ -314,11 +317,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="welcome-to-my-website-for-hw4" class="section level1">
-<h1>Welcome to my website for HW4!</h1>
 <div id="problem-1" class="section level3">
 <h3>Problem 1</h3>
-<p>Creatde a personal website that includes:</p>
+<p>Created a personal website that includes:</p>
 <ul>
 <li>A brief introductory landing page</li>
 <li>My Resume</li>
@@ -328,7 +329,6 @@ $(document).ready(function () {
 <div id="problem-2" class="section level3">
 <h3>Problem 2</h3>
 <p>Created a flexdashboard using plotly for that includes three distinct plot types (e.g. scatterplots, bar plots, box plots) using NYC Restaurant Inspections dataset</p>
-</div>
 </div>
 
 
